--- a/web/package.json
+++ b/web/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.11.16",
-    "@types/react": "18.2.51",
-    "@types/react-dom": "18.2.18",
-    "autoprefixer": "10.4.17",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "firebase": "^10.8.0",
-    "next": "14.1.0",
-    "postcss": "8.4.33",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "@supabase/auth-helpers-nextjs": "^0.7.1",
+    "@supabase/supabase-js": "^2.26.0",
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "eslint": "^8.41.0",
+    "next": "^13.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "eslint-config-next": "^13.4.3"
   }
 }
