--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   geocoding: ^2.2.0
   permission_handler: ^11.3.0
   updater: ^0.2.3
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.1
+  http: ^1.2.2
+  flutter_dotenv: ^5.1.0
 
 
 
